# carcinize

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  STYLEGUIDE.md  pyproject.toml  ruff.toml
.cursor/rules/: python.mdc
.github/workflows/: ci-checks.yml  publish.yml
src/carcinize/: __init__.py  _iter.py  _lazy.py  _result.py  _struct.py  option.py  paths.py  result.py  struct.py
tests/: test_base.py  test_integration.py  test_iter.py  test_lazy.py  test_option.py  test_result.py  test_result_option_integration.py  test_string.py  test_struct.py
