[build-system]
build-backend = "uv_build"
requires = [ "uv-build>=0.9" ]

[project]
name = "carcinize"
version = "0.1.5"
description = "Make your python code a little bit rustier."
readme = "README.md"
license = "WTFPL"
authors = [
  { name = "Ron Leizrowice", email = "ron.leizrowice@protonmail.com" },
]
requires-python = ">=3.13"
dependencies = [
  "pydantic>=2",
  "pydantic-core>=2",
]

[dependency-groups]
dev = [
  "deptry>=0.24",
  "prek>=0.3",
  "pyproject-fmt>=2",
  "pyrefly>=0.53",
  "pytest>=8",
  "pytest-asyncio>=1",
  "ruff>=0.15",
  "rumdl>=0.1",
  "ty>=0.0.17",
]

[tool.deptry.per_rule_ignores]
DEP001 = [ "carcinize" ]
DEP003 = [ "carcinize" ]

[tool.pyproject-fmt]
indent = 2
table_format = "long"
keep_full_version = false
generate_python_version_classifiers = false
collapse_tables = [ "project.authors" ]

[tool.pytest.ini_options]
testpaths = [ "tests" ]
python_files = [ "test_*.py", "*_test.py" ]
python_classes = [ "Test*", "*Test" ]
xfail_strict = true
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
cache_dir = ".cache/pytest"

[tool.pyrefly]
enabled-ignores = [ "pyrefly" ]

[tool.ty.analysis]
respect-type-ignore-comments = false
[tool.ty.rules]
redundant-cast = "ignore"

[tool.rumdl]
disable = [ "MD013" ]
exclude = [
  ".cache/**",
  ".venv/**",
]
cache-dir = ".cache/rumdl"
